--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "keywords": [
     "yii2",
     "view",
-    "requirejs",
+    "jsloader",
     "behavior",
     "assets"
   ],
@@ -18,8 +18,7 @@
   ],
   "require": {
     "php": ">=5.4.0",
-    "yiisoft/yii2": "~2.0",
-    "bower-asset/requirejs": "~2.3"
+    "yiisoft/yii2": "~2.0"
   },
   "require-dev": {
     "codeception/verify": "*",
