--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
   "require-dev": {
     "codeception/verify": "*",
     "codeception/specify": "*",
-    "codeception/codeception": "2.2.*"
+    "codeception/codeception": "2.2.*",
+    "codeclimate/php-test-reporter": "dev-master"
   },
   "autoload": {
     "psr-4": {
