--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   ],
   "require": {
     "php": ">=5.4.0",
-    "yiisoft/yii2": "~2.0"
+    "yiisoft/yii2": "^2.0.4"
   },
   "require-dev": {
     "codeception/verify": "*",
