--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,7 @@
   "require-dev": {
     "codeception/verify": "*",
     "codeception/specify": "*",
-    "codeception/codeception": "2.2.*",
-    "codeclimate/php-test-reporter": "dev-master"
+    "codeception/codeception": "2.2.*"
   },
   "autoload": {
     "psr-4": {
