--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "ischenko/yii2-jsloader",
-  "description": "An Yii2 extension which contains interfaces and base classes for implementing JS loaders such as requirejs",
+  "description": "An Yii2 extension designed to handle JS files, code and asset bundles by various js loaders",
   "keywords": [
     "yii2",
     "view",
@@ -8,6 +8,10 @@
     "behavior",
     "assets"
   ],
+  "support": {
+      "issues": "https://github.com/ischenko/yii2-jsloader/issues?state=open",
+      "source": "https://github.com/ischenko/yii2-jsloader"
+  },
   "type": "yii2-extension",
   "license": "MIT",
   "authors": [
