Use Codeception/Specify v0.4.4

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
   },
   "require-dev": {
     "codeception/verify": "*",
-    "codeception/specify": "*",
+    "codeception/specify": "0.4.4",
     "codeception/codeception": "*"
   },
   "autoload": {
